# hotel/api/http/steup.go
@@ -6,6 +6,7 @@ import (
 	"hotel/api/http/middlewares"
 	"hotel/config"
 	_ "hotel/docs"
+	"hotel/pkg/adapters"
 	"hotel/service"
 	"log"
 
@@ -18,6 +19,7 @@ func Run(cfg config.Config, app *service.AppContainer) {
 	api := fiberApp.Group("/api/v1", middlewares.SetUserContext())
 	registerHotelRoutes(api, app)
 	registerRoomRoutes(api, app)
+	registerReservationRoutes(api, app)
 	fiberApp.Get("/swagger/*", fiberSwagger.WrapHandler)
 
 	log.Fatal(fiberApp.Listen(fmt.Sprintf("%s:%d", cfg.Server.Host, cfg.Server.HttpPort)))
@@ -25,19 +27,80 @@ func Run(cfg config.Config, app *service.AppContainer) {
 
 func registerHotelRoutes(router fiber.Router, app *service.AppContainer) {
 	router = router.Group("/hotels")
-	router.Post("", middlewares.SetUserContext(), handlers.CreateHotel(app.HotelService()))
-	router.Get("", middlewares.SetUserContext(), handlers.GetHotels(app.HotelService()))
-	router.Get("/owner", middlewares.SetUserContext(), handlers.GetHotelsByOwnerID(app.HotelService()))
-	router.Put("/:id", middlewares.SetUserContext(), handlers.UpdateHotel(app.HotelService()))
-	router.Delete("/:id", middlewares.SetUserContext(), handlers.DeleteHotel(app.HotelService()))
-	router.Patch("/:id/block", middlewares.SetUserContext(), handlers.BlockHotel(app.HotelService()))
+	router.Post("",
+		middlewares.SetTransaction(adapters.NewGormCommitter(app.RawDBConnection())),
+		handlers.CreateHotel(app.HotelService()),
+	)
+	router.Get("",
+		middlewares.SetTransaction(adapters.NewGormCommitter(app.RawDBConnection())),
+		handlers.GetHotels(app.HotelService()),
+	)
+	router.Get("/owner",
+		middlewares.SetTransaction(adapters.NewGormCommitter(app.RawDBConnection())),
+		handlers.GetHotelsByOwnerID(app.HotelService()),
+	)
+	router.Put("/:id",
+		middlewares.SetTransaction(adapters.NewGormCommitter(app.RawDBConnection())),
+		handlers.UpdateHotel(app.HotelService()),
+	)
+	router.Delete("/:id",
+		middlewares.SetTransaction(adapters.NewGormCommitter(app.RawDBConnection())),
+		handlers.DeleteHotel(app.HotelService()),
+	)
+	router.Patch("/:id/block",
+		middlewares.SetTransaction(adapters.NewGormCommitter(app.RawDBConnection())),
+		handlers.BlockHotel(app.HotelService()),
+	)
 }
 
 func registerRoomRoutes(router fiber.Router, app *service.AppContainer) {
-	router = router.Group("/rooms")
-	router.Post("", middlewares.SetUserContext(), handlers.CreateRoom(app.RoomService()))
-	router.Get("", middlewares.SetUserContext(), handlers.GetRooms(app.RoomService()))
-	router.Get("/:id", middlewares.SetUserContext(), handlers.GetRooms(app.RoomService()))
-	router.Put("/:id", middlewares.SetUserContext(), handlers.UpdateRoom(app.RoomService()))
-	router.Delete("/:id", middlewares.SetUserContext(), handlers.DeleteRoom(app.RoomService()))
+	router = router.Group("/hotels/:hotel_id/rooms")
+	router.Post("",
+		middlewares.SetTransaction(adapters.NewGormCommitter(app.RawDBConnection())),
+		handlers.CreateRoom(app.RoomService()),
+	)
+	router.Get("",
+		middlewares.SetTransaction(adapters.NewGormCommitter(app.RawDBConnection())),
+		handlers.GetRooms(app.RoomService()),
+	)
+	// router.Get("/:id",
+	// 	middlewares.SetTransaction(adapters.NewGormCommitter(app.RawDBConnection())),
+	// 	handlers.GetRoomByID(app.RoomService()),
+	// )
+	router.Put("/:id",
+		middlewares.SetTransaction(adapters.NewGormCommitter(app.RawDBConnection())),
+		handlers.UpdateRoom(app.RoomService()),
+	)
+	router.Delete("/:id",
+		middlewares.SetTransaction(adapters.NewGormCommitter(app.RawDBConnection())),
+		handlers.DeleteRoom(app.RoomService()),
+	)
+}
+
+func registerReservationRoutes(router fiber.Router, app *service.AppContainer) {
+	router = router.Group("/reservations")
+	router.Post("",
+		middlewares.SetTransaction(adapters.NewGormCommitter(app.RawDBConnection())),
+		handlers.CreateReservation(app.ReservationService()),
+	)
+	router.Get("/hotel",
+		middlewares.SetTransaction(adapters.NewGormCommitter(app.RawDBConnection())),
+		handlers.GetReservationsByHotelOwner(app.ReservationService()),
+	)
+	router.Get("/user",
+		middlewares.SetTransaction(adapters.NewGormCommitter(app.RawDBConnection())),
+		handlers.GetReservationByUserID(app.ReservationService()),
+	)
+	router.Get("/:id",
+		middlewares.SetTransaction(adapters.NewGormCommitter(app.RawDBConnection())),
+		handlers.GetReservationByID(app.ReservationService()),
+	)
+	router.Put("/:id",
+		middlewares.SetTransaction(adapters.NewGormCommitter(app.RawDBConnection())),
+		handlers.UpdateReservation(app.ReservationService()),
+	)
+	router.Delete("/:id",
+		middlewares.SetTransaction(adapters.NewGormCommitter(app.RawDBConnection())),
+		handlers.DeleteReservation(app.ReservationService()),
+	)
 }
