# hotel/docs/swagger.json
@@ -250,6 +250,315 @@
                 }
             }
         },
+        "/hotels/{id}/block": {
+            "patch": {
+                "description": "Block a hotel by its ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "hotels"
+                ],
+                "summary": "Block a hotel by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Hotel ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Hotel blocked successfully",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/reservations": {
+            "post": {
+                "description": "Create a new reservation",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reservations"
+                ],
+                "summary": "Create a new reservation",
+                "parameters": [
+                    {
+                        "description": "Reservation to create",
+                        "name": "reservation",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/presenter.ReservationCreateReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.ReservationResp"
+                        }
+                    },
+                    "400": {
+                        "description": "error: bad request",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "error: internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/reservations/hotel": {
+            "get": {
+                "description": "Get reservations by hotel owner ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reservations"
+                ],
+                "summary": "Get reservations by hotel owner ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Owner ID",
+                        "name": "owner_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page size",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.FullReservationResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "error: bad request",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "error: internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/reservations/user": {
+            "get": {
+                "description": "Get reservations by user ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reservations"
+                ],
+                "summary": "Get reservations by user ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.ReservationResp"
+                        }
+                    },
+                    "400": {
+                        "description": "error: bad request",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "error: internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/reservations/{id}": {
+            "get": {
+                "description": "Get a reservation by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reservations"
+                ],
+                "summary": "Get a reservation by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Reservation ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.ReservationResp"
+                        }
+                    },
+                    "400": {
+                        "description": "error: bad request",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "error: internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.Response"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update a reservation by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reservations"
+                ],
+                "summary": "Update a reservation by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Reservation ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Reservation to update",
+                        "name": "reservation",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/presenter.ReservationCreateReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.ReservationResp"
+                        }
+                    },
+                    "400": {
+                        "description": "error: bad request",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "error: internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.Response"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a reservation by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "reservations"
+                ],
+                "summary": "Delete a reservation by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Reservation ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "error: bad request",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "error: internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/rooms": {
             "get": {
                 "description": "Get paginated list of rooms",
@@ -433,6 +742,13 @@
     "definitions": {
         "presenter.CreateHotelReq": {
             "type": "object",
+            "required": [
+                "city",
+                "country",
+                "details",
+                "name",
+                "owner_id"
+            ],
             "properties": {
                 "city": {
                     "type": "string",
@@ -451,8 +767,8 @@
                     "example": "myhotel"
                 },
                 "owner_id": {
-                    "type": "integer",
-                    "example": 12
+                    "type": "string",
+                    "example": "aba3b3ed-e3d8-4403-9751-1f04287c9d65"
                 }
             }
         },
@@ -474,6 +790,9 @@
                 "name": {
                     "type": "string"
                 },
+                "owner_id": {
+                    "type": "string"
+                },
                 "rooms": {
                     "type": "array",
                     "items": {
@@ -484,6 +803,15 @@
         },
         "presenter.CreateRoomReq": {
             "type": "object",
+            "required": [
+                "agency_price",
+                "capacity",
+                "facilities",
+                "hotel_id",
+                "is_available",
+                "name",
+                "user_price"
+            ],
             "properties": {
                 "agency_price": {
                     "type": "integer"
@@ -535,11 +863,48 @@
                     "type": "string",
                     "example": "myhotel"
                 },
+                "owner_id": {
+                    "type": "string",
+                    "example": "1"
+                },
                 "rooms": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/room.Room"
                     }
+                }
+            }
+        },
+        "presenter.FullReservationResponse": {
+            "type": "object",
+            "properties": {
+                "check_in": {
+                    "type": "string",
+                    "example": "2024-08-01T00:00:00Z"
+                },
+                "check_out": {
+                    "type": "string",
+                    "example": "2024-08-05T00:00:00Z"
+                },
+                "reservation_id": {
+                    "type": "integer",
+                    "example": 12
+                },
+                "room_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "status": {
+                    "type": "string",
+                    "example": "booked"
+                },
+                "total_price": {
+                    "type": "integer",
+                    "example": 50000
+                },
+                "user_id": {
+                    "type": "string",
+                    "example": "aba3b3ed-e3d8-4403-9751-1f04287c9d65"
                 }
             }
         },
@@ -566,6 +931,69 @@
                 },
                 "userprice": {
                     "type": "integer"
+                }
+            }
+        },
+        "presenter.ReservationCreateReq": {
+            "type": "object",
+            "required": [
+                "check_in",
+                "check_out",
+                "room_id",
+                "status",
+                "total_price",
+                "user_id"
+            ],
+            "properties": {
+                "check_in": {
+                    "type": "string",
+                    "example": "2024-08-01T00:00:00Z"
+                },
+                "check_out": {
+                    "type": "string",
+                    "example": "2024-08-05T00:00:00Z"
+                },
+                "room_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "status": {
+                    "type": "string",
+                    "example": "booked"
+                },
+                "total_price": {
+                    "type": "integer",
+                    "example": 50000
+                },
+                "user_id": {
+                    "type": "string",
+                    "example": "aba3b3ed-e3d8-4403-9751-1f04287c9d65"
+                }
+            }
+        },
+        "presenter.ReservationResp": {
+            "type": "object",
+            "properties": {
+                "check_in": {
+                    "type": "string"
+                },
+                "check_out": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "room_id": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "total_price": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "string"
                 }
             }
         },
